--- a/client/fronted/public/index.html
+++ b/client/fronted/public/index.html
@@ -7,6 +7,7 @@
     <!--<link rel="icon" href="<%= BASE_URL %>favicon.ico">-->
     <link rel="icon" href="11.ico">
     <title>Seeking roots</title>
+    <base href="/" />
   </head>
   <body>
     <noscript>
